# palsar2-scansar

./: .markdownlint.json  .mdlrc  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker_env  environment.yml  setup.cfg
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile  build  cibuild  console  format
examples/: ALOS2437590500-220630_WWDR2.2GUA.json  collection.json  palsar2-scansar.json
examples/ALOS2437590500-220630_WWDR2.2GUA/: ALOS2437590500-220630_WWDR2.2GUA.json
scripts/: create_examples.py  test
src/stactools/palsar2_scansar/: __init__.py  card4l_metadata.py  commands.py  constants.py  stac.py
tests/: test_commands.py  test_module.py  test_stac.py
tests/data-files/: ALOS2437590500-220630-WWDR2.2GUA.kml  ALOS2437590500-220630_WWDR2.2GUA_HV_SLP.tif  ALOS2437590500-220630_WWDR2.2GUA_LIN.tif  ALOS2437590500-220630_WWDR2.2GUA_MSK.tif  ALOS2437590500-220630_WWDR2.2GUA_summary.xml
