[metadata]
name = stactools-palsar2-scansar
version = attr: stactools.palsar2_scansar.__version__
description = PALSAR-2 ScanSAR backscatter stactools package
long_description = file: README.md
long_description_content_type = text/markdown
author = Alex Mandel
author_email = alex@developmentseed.org
url = https://github.com/stactools-packages/palsar2-scansar
project_urls =
    Issues = https://github.com/stactools-packages/palsar2-scansar/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.4.0

[options.packages.find]
where = src
